# agenda-bot

./: Cargo.toml  README.md  TODO
src/: agenda.rs  discord.rs  main.rs  reminder.rs  slack.rs
