[package]
name = "agenda-bot"
version = "0.1.0"
authors = ["Gustav Sörnäs <gustav@sornas.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
discord = { git = "https://github.com/SpaceManiac/discord-rs" } #TODO no voice
futures = "0.3"
slack = "0.25"
tokio = { version = "0.2", features = ["full"] } #TODO actual features
